Collapse and Acordion

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                   <a class="btn btn-warning btn-sm" href="#reserve">Reserve Table</a>
+                   <a role="button" class=" nav-link btn btn-warning btn-sm" data-toggle="tooltip"
+                   data-html="true"  title="" href="#reserve">Reserve Table</a>
                 </div>
             </div>
         </div>
